--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -62,7 +62,7 @@
       display: inline-block;
       margin: 0 18px 0 15px;
 
-      img {
+      i {
         vertical-align: bottom;
       }
     }
