--- a/less/blocks/price-table.less
+++ b/less/blocks/price-table.less
@@ -1,6 +1,6 @@
 .price-table {
   width: 100%;
-  margin: -43px auto 18px;
+  margin: -42px auto 18px;
 
   &__caption {
     position: relative;
@@ -45,15 +45,19 @@
     background: transparent;
   }
 
+  tr {
+    border-bottom: 2px solid #f2f2f2;
+  }
+
   th {
     width: 25%;
-    border-right: 2px solid @white;
-    border-left: 2px solid @white;
+    border-right: 1px solid @white;
+    border-left: 1px solid @white;
   }
 
   td {
-    border: 2px solid #f2f2f2;
-    padding: 13px 25px 16px;
+    // border: 2px solid #f2f2f2;
+    padding: 13px 20px 16px;
     font-size: 14px;
     background: @white;
     text-transform: uppercase;
@@ -128,6 +132,7 @@
   }
 
   th {
+
     &:first-child {
       border-left: none;
     }
