--- a/css/style.css
+++ b/css/style.css
@@ -1312,7 +1312,7 @@ th {
   clear: both;
 }
 .clearlist,
-.page-header.open .main-nav > ul,
+.main-nav ul,
 .intro-desc__apps-list,
 .features,
 .social {
@@ -1435,6 +1435,7 @@ p {
 }
 .page-header {
   background: rgba(0, 0, 0, 0.5);
+  transition: background .4s;
 }
 .page-header__container {
   max-width: 960px;
@@ -1467,27 +1468,44 @@ p {
   clear: both;
 }
 .main-nav {
-  display: none;
-}
-.page-header.open {
-  background: #283645;
-}
-.page-header.open .main-nav {
   display: block;
   float: left;
   width: 100%;
 }
-.page-header.open .main-nav > ul {
+.main-nav ul {
+  display: block;
   margin-top: 5px;
   text-align: center;
+  max-height: 0;
+  overflow: hidden;
+  background: #283645;
+  transition: max-height 0.4s;
 }
-.page-header.open .main-nav > ul li {
+.main-nav ul li {
+  border-top: 1px solid #000000;
+  box-shadow: 0 1px 0 #485562 inset;
+}
+.main-nav ul li:last-child {
   border-bottom: 1px solid #000000;
-  padding: 17px 10px;
-  box-shadow: 0 1px 0 #485562 inset, 0 -1px 0 #000000;
 }
-.page-header .main-nav > ul li > a,
-.page-header .main-nav > ul li > span {
+.page-header.open {
+  background: #283645;
+}
+.page-header.open .main-nav ul {
+  max-height: 500px;
+}
+.page-header.open .main-nav ul > li:hover > a,
+.page-header.open .main-nav ul > li:hover > span,
+.page-header.open .main-nav ul > li:focus > a,
+.page-header.open .main-nav ul > li:focus > span,
+.page-header.open .main-nav ul > li.active > a,
+.page-header.open .main-nav ul > li.active > span {
+  color: #d22856;
+  text-decoration: none;
+}
+.page-header .main-nav ul > li > a,
+.page-header .main-nav ul > li > span {
+  display: block;
   font-size: 18px;
   line-height: 1.7142857;
   font-weight: 700;
@@ -1495,25 +1513,14 @@ p {
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
-  border-bottom: 2px solid transparent;
 }
-.page-header .main-nav > ul li > a:hover,
-.page-header .main-nav > ul li > span:hover,
-.page-header .main-nav > ul li > a:focus,
-.page-header .main-nav > ul li > span:focus,
-.page-header .main-nav > ul li > a.active,
-.page-header .main-nav > ul li > span.active {
-  text-decoration: none;
-  border-bottom: 2px solid #ffffff;
-}
-.page-header .main-nav > ul li > a.active,
-.page-header .main-nav > ul li > span.active {
+.page-header .main-nav ul > li > a.active,
+.page-header .main-nav ul > li > span.active {
   cursor: default;
 }
-.page-header .main-nav > ul li > a:active,
-.page-header .main-nav > ul li > span:active {
+.page-header .main-nav ul > li > a:active,
+.page-header .main-nav ul > li > span:active {
   opacity: .3;
-  border-bottom: 2px solid transparent;
 }
 .nav-toggle {
   position: absolute;
@@ -1553,22 +1560,45 @@ p {
   .nav-toggle {
     display: none;
   }
-  .main-nav {
-    display: block;
+  .page-header .main-nav {
+    display: table;
   }
-  .main-nav ul {
-    display: block;
+  .page-header .main-nav ul {
+    display: table-row;
+    max-height: 100%;
+    background: transparent;
   }
-  .main-nav ul > li {
-    display: inline-block;
+  .page-header .main-nav ul > li {
+    display: table-cell;
+    border-top: none;
+    box-shadow: none;
+    padding: 24px 0 29px;
   }
-  .main-nav ul > li > a {
-    display: block;
+  .page-header .main-nav ul > li:last-child {
+    border-bottom: none;
+  }
+  .page-header .main-nav ul > li > a,
+  .page-header .main-nav ul > li > span {
+    display: inline;
     font-size: 18px;
     font-weight: 400;
     color: #ffffff;
-    padding: 4px 35px;
+    padding: 10px 0;
     text-transform: none;
+    border-bottom: 2px solid transparent;
+  }
+  .page-header .main-nav ul > li > a:hover,
+  .page-header .main-nav ul > li > a:focus,
+  .page-header .main-nav ul > li > a.active {
+    text-decoration: none;
+    color: #ffffff;
+    border-bottom: 2px solid #ffffff;
+  }
+  .page-header .main-nav ul > li > a.active {
+    cursor: default;
+  }
+  .page-header .main-nav ul > li > a:active {
+    border-bottom: 2px solid transparent;
   }
 }
 @media (min-width: 1100px) {
@@ -1580,6 +1610,9 @@ p {
 }
 .page-footer {
   overflow: hidden;
+}
+.page-footer__container {
+  padding: 33px 0 0px;
 }
 .logo {
   float: left;
@@ -1840,7 +1873,7 @@ p {
 }
 .slider-controls {
   position: absolute;
-  bottom: 11px;
+  bottom: 13px;
   left: 50%;
   width: 200px;
   height: 10px;
