--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -107,7 +107,7 @@
     cursor: pointer;
     height: 4px;
     width: 50px;
-    background: white;
+    background: @white;
     position: absolute;
     display: block;
     content: '';
@@ -169,7 +169,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: 0;
     height: 0;
     background: @white;
     transform: scale(0);
@@ -200,6 +200,7 @@
   }
   .main-nav ul > li a:hover:after,
   .main-nav ul > li span:hover:after {
+    width: 100%;
     height: 2px;
     opacity: 1;
     transform: scale(1);
