--- a/css/style.css
+++ b/css/style.css
@@ -1595,9 +1595,6 @@ p {
     width: 0;
     height: 0;
     background: #ffffff;
-    -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-            transform: scale(0);
     opacity: 0;
     transition: all .5s;
   }
@@ -1626,9 +1623,6 @@ p {
     width: 100%;
     height: 2px;
     opacity: 1;
-    -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-            transform: scale(1);
   }
   .main-nav ul > li.active > a,
   .main-nav ul > li > a:active {
@@ -2277,14 +2271,31 @@ input[id^="btn-"] {
 }
 .social {
   margin: 10px 0;
+  text-align: center;
 }
 .social__btn {
   display: inline-block;
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
-  border: 3px solid #e9ebec;
+  width: 51px;
+  height: 51px;
+  margin-right: 8px;
+  padding-top: 15px;
   color: transparent;
   font: 0/0 a;
+  text-align: center;
+  vertical-align: middle;
+  border: 3px solid #e9ebec;
   border-radius: 50%;
+}
+.social__btn:hover,
+.social__btn:focus {
+  border-color: #283645;
+}
+.social__btn:active {
+  opacity: .5;
+}
+.social__btn--fb {
+  padding-top: 12px;
+}
+.social__btn--youtube {
+  padding-left: 6px;
 }
