--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -172,7 +172,7 @@
     width: 0;
     height: 0;
     background: @white;
-    transform: scale(0);
+    // transform: scale(0);
     opacity: 0;
     transition: all .5s;
   }
@@ -203,7 +203,7 @@
     width: 100%;
     height: 2px;
     opacity: 1;
-    transform: scale(1);
+    // transform: scale(1);
   }
 
 
