--- a/svg/css/grunticon-icons.data.svg.css
+++ b/svg/css/grunticon-icons.data.svg.css
@@ -22,7 +22,7 @@
 .icon-facebook {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%228.673%22%20height%3D%2218.944%22%20viewBox%3D%220%200%208.673%2018.944%22%3E%3Cpath%20d%3D%22M6.275%203.357h2.398V0H5.795C2.655.18%201.54%202.387%201.948%206.115H0v3.517h1.958v9.312h3.837V9.632h2.857V6.115H5.786c-.02-1.045-.036-2.406.49-2.758z%22%2F%3E%3C%2Fsvg%3E');
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%228.673%22%20height%3D%2218.944%22%20viewBox%3D%220%200%208.673%2018.944%22%20fill%3D%22%23d22856%22%3E%3Cpath%20d%3D%22M6.275%203.357h2.398V0H5.795C2.655.18%201.54%202.387%201.948%206.115H0v3.517h1.958v9.312h3.837V9.632h2.857V6.115H5.786c-.02-1.045-.036-2.406.49-2.758z%22%2F%3E%3C%2Fsvg%3E');
   background-repeat: no-repeat;
   width: 8.673px;
   height: 18.944px;
@@ -112,7 +112,7 @@
 .icon-twitter {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2217.5%22%20height%3D%2214.663%22%20viewBox%3D%220%200%2017.5%2014.663%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M11.283.153c1.736-.485%203.074.263%203.685%201.15.694-.225%201.372-.47%202.072-.69-.004.84-.538%201.478-.883%201.727.704.166%201.343-.48%201.343-.48-.175.976-1.035%201.746-1.61%201.977-.24%206.592-3.273%2010.956-10.383%2010.823h-.46c-.422%200-4.29-.45-5.047-1.843%202.34.192%204.01-.412%204.835-1.15-.99-.293-2.76-.464-3.07-2.88.362.104.583.222%201.228.116C1.757%208.067.385%207.366.46%205.218c.295.32%201.1.523%201.382.46C1.117%205.445-.188%202.4.922.844c1.872%201.81%203.847%203.52%207.368%203.685.216-2.24%201.17-3.74%202.993-4.375z%22%2F%3E%3C%2Fsvg%3E');
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2217.5%22%20height%3D%2214.663%22%20viewBox%3D%220%200%2017.5%2014.663%22%20fill%3D%22%23d22856%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M11.283.153c1.736-.485%203.074.263%203.685%201.15.694-.225%201.372-.47%202.072-.69-.004.84-.538%201.478-.883%201.727.704.166%201.343-.48%201.343-.48-.175.976-1.035%201.746-1.61%201.977-.24%206.592-3.273%2010.956-10.383%2010.823h-.46c-.422%200-4.29-.45-5.047-1.843%202.34.192%204.01-.412%204.835-1.15-.99-.293-2.76-.464-3.07-2.88.362.104.583.222%201.228.116C1.757%208.067.385%207.366.46%205.218c.295.32%201.1.523%201.382.46C1.117%205.445-.188%202.4.922.844c1.872%201.81%203.847%203.52%207.368%203.685.216-2.24%201.17-3.74%202.993-4.375z%22%2F%3E%3C%2Fsvg%3E');
   background-repeat: no-repeat;
   width: 17.5px;
   height: 14.663px;
@@ -122,7 +122,7 @@
 .icon-youtube {
   display: inline-block;
   vertical-align: middle;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2214.64%22%20height%3D%2213.96%22%20viewBox%3D%220%200%2014.64%2013.96%22%3E%3Cpath%20d%3D%22M1.775%2013.78C.8%2014.257%200%2013.758%200%2012.67V1.29C0%20.202.8-.295%201.775.18l12.133%205.933c.975.478.975%201.258%200%201.736L1.775%2013.78z%22%2F%3E%3C%2Fsvg%3E');
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2214.64%22%20height%3D%2213.96%22%20viewBox%3D%220%200%2014.64%2013.96%22%20fill%3D%22%23d22856%22%3E%3Cpath%20d%3D%22M1.775%2013.78C.8%2014.257%200%2013.758%200%2012.67V1.29C0%20.202.8-.295%201.775.18l12.133%205.933c.975.478.975%201.258%200%201.736L1.775%2013.78z%22%2F%3E%3C%2Fsvg%3E');
   background-repeat: no-repeat;
   width: 14.64px;
   height: 13.96px;
