--- a/less/style.less
+++ b/less/style.less
@@ -25,7 +25,8 @@
 @import 'blocks/effect.less';
 @import 'blocks/reviews.less';
 @import 'blocks/contacts.less';
-@import 'blocks/social-btns.less';
+@import 'blocks/socials.less';
+@import 'blocks/copyright.less';
 
 
 
