--- a/css/style.css
+++ b/css/style.css
@@ -1545,8 +1545,7 @@ p {
   transition: transform .5s;
 }
 .nav-toggle span {
-  transition: background .5s;
-  transition-delay: background .5s;
+  transition: width .5s;
 }
 .nav-toggle span:before {
   top: -10px;
@@ -1556,7 +1555,8 @@ p {
 }
 .open .nav-toggle span {
   background: transparent;
-  transition: background 0s;
+  width: 0;
+  transition: all 0s;
 }
 .open .nav-toggle span:before {
   -webkit-transform: rotate(45deg) translate(25px, -9px);
@@ -1677,6 +1677,21 @@ p {
   margin: 0 0 0 15px;
   padding: 16px 5px 21px;
 }
+.icon-glasses,
+.icon-glasses-hvr {
+  display: none;
+}
+@media (min-width: 700px) and (max-width: 1200px) {
+  .icon-glasses {
+    display: inline-block;
+  }
+}
+@media (min-width: 1100px) {
+  .logo {
+    margin: 0;
+    padding: 17px 0px 21px;
+  }
+}
 .btn {
   display: inline-block;
   padding: 8px 25px 11px;
@@ -1710,17 +1725,12 @@ p {
   max-width: 281px;
 }
 @media (min-width: 700px) {
-  .btn--fixed {
-    margin-bottom: 44px;
-  }
-}
-@media (min-width: 700px) {
   .btn {
     padding: 5px 25px 8px;
     font-size: 21px;
   }
   .btn--fixed {
-    margin-bottom: 66px;
+    margin-bottom: 45px;
   }
 }
 .intro {
@@ -1735,13 +1745,14 @@ p {
   height: 100%;
   margin: auto;
   position: relative;
-  background: url(../img/bg__intro--hand.png) no-repeat 0 173px;
+  background: url(../img/bg__intro--hand.png) no-repeat 50% 173px;
 }
 .intro__caption {
   position: absolute;
   width: 320px;
   top: 85px;
-  margin: 0 auto;
+  left: 50%;
+  margin: 0 0 0 -160px;
   padding: 0 10px;
   text-align: center;
   font-size: 24px;
@@ -1788,12 +1799,13 @@ p {
     left: 60px;
     font-size: 40px;
     line-height: 48px;
+    margin: 0;
   }
   .intro-desc {
     position: absolute;
     background: transparent;
     bottom: 81px;
-    left: 21px;
+    left: 40px;
     right: auto;
   }
   .intro-desc p {
@@ -1802,11 +1814,14 @@ p {
     line-height: 24px;
     letter-spacing: 0;
   }
+  .intro-desc__container {
+    width: 302px;
+  }
   .intro-desc__apps-list {
     padding-bottom: 37px;
   }
   .intro-desc__apps-list li {
-    margin: 0 10px 0 23px;
+    margin: 0 18px 0 15px;
   }
   .btn--fixed {
     max-width: 100%;
@@ -1927,7 +1942,7 @@ p {
   font-size: 0;
 }
 .slider--tables {
-  padding: 0 20px;
+  padding: 0 22px 0 18px;
 }
 .slider-controls {
   position: absolute;
@@ -2031,7 +2046,7 @@ input[id^="btn-"] {
 }
 .price-table th {
   width: 25%;
-  border-right: 1px solid #ffffff;
+  border-right: 0px solid #ffffff;
   border-left: 1px solid #ffffff;
 }
 .price-table td {
@@ -2297,8 +2312,11 @@ input[id^="btn-"] {
     height: 522px;
   }
 }
+.socials {
+  padding: 20px 0;
+}
 .social {
-  margin: 10px 0;
+  padding: 20px 0px 0 12px;
   text-align: center;
 }
 .social__btn {
@@ -2326,4 +2344,58 @@ input[id^="btn-"] {
 }
 .social__btn--youtube {
   padding-left: 6px;
+}
+@media (min-width: 992px) {
+  .socials {
+    padding: 55px 0;
+  }
+  .social {
+    padding: 22px 0px 0 0px;
+  }
+}
+.copyright {
+  padding: 28px 0;
+}
+.copyright span {
+  vertical-align: middle;
+}
+.copyright a {
+  display: inline-block;
+  font-size: 0;
+  vertical-align: middle;
+  line-height: 30px;
+}
+.copyright__glukhanko {
+  padding: 3px 11px 0;
+}
+.copyright__glukhanko:hover i,
+.copyright__glukhanko:focus i {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2225.988%22%20height%3D%2229.922%22%20viewBox%3D%220%200%2025.988%2029.922%22%20fill%3D%22%23283645%22%3E%3Cpath%20d%3D%22M0%200h25.988v29.922l-12.994-4.81L0%2029.92V0zm20.154%2017.895c-.24%200-.51-.006-.8-.018-.294-.014-.51-.05-.646-.116-.225-.102-.39-.26-.5-.468-.107-.21-.162-.492-.162-.854%200-.394.018-1.21.055-2.457.036-1.243.055-2.318.055-3.225%200-.858-.146-1.556-.44-2.088-.293-.535-.687-.942-1.185-1.223-.522-.29-1.108-.48-1.758-.572-.65-.093-1.365-.14-2.143-.14-.563%200-1.173.068-1.83.2-.66.132-1.24.318-1.747.56-.513.233-.95.528-1.306.885-.357.357-.536.76-.536%201.21%200%20.52.174.945.52%201.27.346.323.857.486%201.533.486.476%200%20.827-.043%201.057-.132.23-.088.437-.212.622-.373.138-.12.242-.283.314-.487.072-.205.11-.375.11-.51%200-.307-.058-.623-.17-.953-.113-.33-.18-.573-.206-.734.145-.104.335-.207.572-.308.237-.1.533-.15.886-.15.393%200%20.71.088.952.264.24.176.417.392.53.65.104.225.172.5.205.83.032.328.048.594.048.795v1.155c-.467.224-1.207.48-2.22.767-1.013.285-1.88.56-2.604.826-.38.143-.727.3-1.044.47-.317.17-.597.38-.838.64-.265.28-.47.605-.615.97-.145.365-.217.81-.217%201.332%200%20.91.33%201.637.99%202.19.657.55%201.454.824%202.387.824.627%200%201.115-.045%201.465-.133.35-.09.714-.223%201.09-.396.29-.137.562-.302.815-.493.253-.193.517-.426.79-.7h.073c.168.547.484.966.95%201.26.464.293%201.19.438%202.175.438.537%200%201.046-.064%201.526-.192s.896-.27%201.25-.42v-.878zm-6.02-1.302c-.218.265-.47.487-.755.668-.287.184-.65.272-1.095.272-.42%200-.77-.14-1.057-.42-.286-.282-.43-.738-.43-1.364%200-.475.084-.887.254-1.238.17-.35.403-.638.7-.862.283-.217.645-.424%201.088-.622.443-.197.89-.372%201.342-.525l-.05%204.093z%22%2F%3E%3C%2Fsvg%3E');
+}
+.copyright__glukhanko:active i {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2225.988%22%20height%3D%2229.922%22%20viewBox%3D%220%200%2025.988%2029.922%22%20fill%3D%22%23bec2c7%22%3E%3Cpath%20d%3D%22M0%200h25.988v29.922l-12.994-4.81L0%2029.92V0zm20.154%2017.895c-.24%200-.51-.006-.8-.018-.294-.014-.51-.05-.646-.116-.225-.102-.39-.26-.5-.468-.107-.21-.162-.492-.162-.854%200-.394.018-1.21.055-2.457.036-1.243.055-2.318.055-3.225%200-.858-.146-1.556-.44-2.088-.293-.535-.687-.942-1.185-1.223-.522-.29-1.108-.48-1.758-.572-.65-.093-1.365-.14-2.143-.14-.563%200-1.173.068-1.83.2-.66.132-1.24.318-1.747.56-.513.233-.95.528-1.306.885-.357.357-.536.76-.536%201.21%200%20.52.174.945.52%201.27.346.323.857.486%201.533.486.476%200%20.827-.043%201.057-.132.23-.088.437-.212.622-.373.138-.12.242-.283.314-.487.072-.205.11-.375.11-.51%200-.307-.058-.623-.17-.953-.113-.33-.18-.573-.206-.734.145-.104.335-.207.572-.308.237-.1.533-.15.886-.15.393%200%20.71.088.952.264.24.176.417.392.53.65.104.225.172.5.205.83.032.328.048.594.048.795v1.155c-.467.224-1.207.48-2.22.767-1.013.285-1.88.56-2.604.826-.38.143-.727.3-1.044.47-.317.17-.597.38-.838.64-.265.28-.47.605-.615.97-.145.365-.217.81-.217%201.332%200%20.91.33%201.637.99%202.19.657.55%201.454.824%202.387.824.627%200%201.115-.045%201.465-.133.35-.09.714-.223%201.09-.396.29-.137.562-.302.815-.493.253-.193.517-.426.79-.7h.073c.168.547.484.966.95%201.26.464.293%201.19.438%202.175.438.537%200%201.046-.064%201.526-.192s.896-.27%201.25-.42v-.878zm-6.02-1.302c-.218.265-.47.487-.755.668-.287.184-.65.272-1.095.272-.42%200-.77-.14-1.057-.42-.286-.282-.43-.738-.43-1.364%200-.475.084-.887.254-1.238.17-.35.403-.638.7-.862.283-.217.645-.424%201.088-.622.443-.197.89-.372%201.342-.525l-.05%204.093z%22%2F%3E%3C%2Fsvg%3E');
+}
+.copyright__academy {
+  padding: 2px 0 0 13px;
+}
+.copyright__academy:hover i,
+.copyright__academy:focus i {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2226.096%22%20height%3D%2233.803%22%20viewBox%3D%220%200%2026.096%2033.803%22%20fill%3D%22%23283645%22%3E%3Cpath%20d%3D%22M13.047%200L0%201.456V25.93l13.047%207.836v.037l13.05-7.872V1.558L13.046%200zm10.99%2024.745l-10.99%206.622v-7.385L6.68%2021.124v-.02l6.372-2.817v-.02.01l6.367%202.815v-.006l.01.006v-1.234l-6.367-2.813-.003.003-.007-.003v.01-.002L6.678%2019.87v-1.235l5.847-2.584-1.385-.62L6.68%2017.4v-1.234l3.076-1.36-1.385-.622-1.69.748V13.7l.305-.135-3.73-1.674%209.793-4.247v-5.56l10.99%201.322v21.34zM19.428%2017.39l-4.47-1.976-1.388.62%205.858%202.59zM19.428%2014.92l-1.694-.748-1.388.62%203.082%201.363z%22%2F%3E%3C%2Fsvg%3E');
+}
+.copyright__academy:active i {
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20version%3D%221%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2226.096%22%20height%3D%2233.803%22%20viewBox%3D%220%200%2026.096%2033.803%22%20fill%3D%22%23bec2c7%22%3E%3Cpath%20d%3D%22M13.047%200L0%201.456V25.93l13.047%207.836v.037l13.05-7.872V1.558L13.046%200zm10.99%2024.745l-10.99%206.622v-7.385L6.68%2021.124v-.02l6.372-2.817v-.02.01l6.367%202.815v-.006l.01.006v-1.234l-6.367-2.813-.003.003-.007-.003v.01-.002L6.678%2019.87v-1.235l5.847-2.584-1.385-.62L6.68%2017.4v-1.234l3.076-1.36-1.385-.622-1.69.748V13.7l.305-.135-3.73-1.674%209.793-4.247v-5.56l10.99%201.322v21.34zM19.428%2017.39l-4.47-1.976-1.388.62%205.858%202.59zM19.428%2014.92l-1.694-.748-1.388.62%203.082%201.363z%22%2F%3E%3C%2Fsvg%3E');
+}
+@media (min-width: 992px) {
+  .copyright {
+    padding: 28px 0 0 80px;
+  }
+  .copyright span {
+    font-size: 18px;
+  }
+  .copyright__glukhanko {
+    padding: 3px 9px 0;
+  }
+  .copyright__academy {
+    padding: 2px 0 0 9px;
+  }
 }
