--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -13,14 +13,15 @@
     height: 100%;
     margin: auto;
     position: relative;
-    background: url(../img/bg__intro--hand.png) no-repeat 0 173px;
+    background: url(../img/bg__intro--hand.png) no-repeat 50% 173px;
   }
 
   &__caption {
     position: absolute;
     width: 320px;
     top: 85px;
-    margin: 0 auto;
+    left: 50%;
+    margin: 0 0 0 -160px;
     padding: 0 10px;
     text-align: center;
     font-size: @fz-h3;
@@ -79,12 +80,13 @@
     left: 60px;
     font-size: 40px;
     line-height: 48px;
+    margin: 0;
   }
   .intro-desc {
     position: absolute;
     background: transparent;
     bottom: 81px;
-    left: 21px;
+    left: 40px;
     right: auto;
   }
   .intro-desc p {
@@ -93,11 +95,14 @@
     line-height: 24px;
     letter-spacing: 0;
   }
+  .intro-desc__container {
+    width: 302px;
+  }
   .intro-desc__apps-list {
     padding-bottom: 37px;
   }
   .intro-desc__apps-list li {
-    margin: 0 10px 0 23px;
+    margin: 0 18px 0 15px;
   }
   .btn--fixed {
     max-width: 100%;
