--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -115,12 +115,11 @@
   }
 
   span {
-    transition: background .5s;
-    transition-delay: background .5s;
+    transition: width .5s;
   }
 
   span:before {
-    top: -10px; 
+    top: -10px;
   }
 
   span:after {
@@ -130,7 +129,8 @@
 .open .nav-toggle {
   span {
     background: transparent;
-    transition: background 0s;
+    width: 0;
+    transition: all 0s;
 
     &:before {
       transform: rotate(45deg) translate(25px, -9px);
