--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -48,12 +48,9 @@
   }
 
   &--tables {
-    padding: 0 20px;
+    padding: 0 22px 0 18px;
   }
 }
-// .slider-inner{
-//   overflow:hidden;
-// }
 
 .slider-controls {
     position: absolute;
