--- a/less/blocks/box.less
+++ b/less/blocks/box.less
@@ -20,8 +20,13 @@
 
   &__container {
     padding: 25px 0;
+
+    &--features {
+      margin-top: -58px;
+    }
   }
 }
+
 
 // svg
 .box--angle {
@@ -38,6 +43,16 @@
   .box--angle {
     margin-bottom: -150px;
     height: 145px;
+  }
+  .box__container--captions {
+    padding: 49px 0;
+
+    .page-caption:last-child {
+      padding: 0 50px;
+    }
+  }
+  .box__container--features {
+    padding-bottom: 0;
   }
 }
 
