--- a/less/blocks/features.less
+++ b/less/blocks/features.less
@@ -1,7 +1,7 @@
 .features {
   &:extend(.clearlist);
   text-align: center;
-  margin-top: -58px;
+  // margin-top: -58px;
 
 
   &__item {
@@ -31,6 +31,7 @@
 
     img {
       min-width: 157px;
+      max-width: 268px;
     }
   }
 }
@@ -45,6 +46,9 @@
   }
   .features__item p {
     padding-bottom: 25px;
+  }
+  .features__mob-img {
+    margin: -105px 0 0 5px;
   }
   .features__mob-img img {
     max-width: 268px;
