--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -72,7 +72,7 @@
 
 @media (min-width: 700px) {
   .intro__container {
-    background: url(../img/iphone-hand-2@1x.png) no-repeat 0px 100%;
+    background: url(../img/iphone-hand-2-1x.png) no-repeat 0px 100%;
   }
   .intro__caption {
     width: 260px;
@@ -96,7 +96,7 @@
     letter-spacing: 0;
   }
   .intro-desc__container {
-    width: 302px;
+    width: 305px;
   }
   .intro-desc__apps-list {
     padding-bottom: 37px;
@@ -114,7 +114,7 @@
     height: 854px;
   }
   .intro__container {
-    background: url(../img/iphone-hand-3@1x.png) no-repeat -29% 100%;
+    background: url(../img/iphone-hand-3-1x.png) no-repeat -29% 100%;
   }
   .intro__caption {
     top: 218px;
