--- a/less/base/layout.less
+++ b/less/base/layout.less
@@ -14,3 +14,9 @@
   display:table-row;
   height: 1px;
 }
+
+@media (min-width: 700px) and (max-width: 992px) {
+  .col-md--pl0 {
+    padding-left: 0;
+  }
+}
