--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -2,15 +2,55 @@
   margin: 0;
   padding-top: 14px;
   text-align: center;
+  
+  .icon-quotes {
+    display: none;
+  }
 
   &__author {
     .small-caption; 
     display: block;
     font-style: normal;
     padding-bottom: 13px;
+
+    small {
+      display: none;
+    }
   }
 
   &__text {
     line-height: 30px;
+  }
+}
+
+
+@media (min-width: 700px) {
+  .reviews__text {
+    font-size: 18px;
+  }
+  .reviews__author {
+    font-size: 20px;
+
+    small {
+      display: block;
+      .text-font (14px, 30px, 400)
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  .reviews .icon-quotes {
+    display: inline-block;
+  }
+  .reviews__text {
+    font-size: 18px;
+  }
+  .reviews__author {
+    font-size: 24px;
+
+    small {
+      display: block;
+      .text-font (18px, 25px, 400)
+    }
   }
 }
